--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+*.dwlt
+DuckGameXR/Logs/AssetImportWorker0.log
+DuckGameXR/Library/CurrentLayout-default.dwlt
+DuckGameXR/Logs/AssetImportWorker0.log
+*.log
