--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ DuckGameXR/Logs/AssetImportWorker0.log
 DuckGameXR/Library/CurrentLayout-default.dwlt
 DuckGameXR/Logs/AssetImportWorker0.log
 *.log
+DuckGameXR/Library/CurrentLayout-default.dwlt
+DuckGameXR/Library/PackageManager/ProjectCache.md5
+*.dwlt
+*.md5
